@@ -1,6 +1,7 @@
 package com.mooo.aimmac23.hub.videostorage;
 
 import java.io.InputStream;
+import java.util.Map;
 
 /**
  * An interface to describe a plugin which handles how we store videos.
@@ -16,9 +17,13 @@ public interface IVideoStore {
 	 * @param videoStream - an input stream for the video being streamed from the node.
 	 * @param mimeType - a mimetype for the video stream.
 	 * @param sessionId - the Selenium session ID which this video recorded.
+	 * @param requestedCapabilities - The capabilities map that the client requested. This could potentially
+	 * contain useful information to help identify the job (like a name)
+	 * @param nodeCapabilities - The capabilities of the node that the video was recorded on.
 	 * @throws Exception if anything went wrong when trying to store the video.
 	 */
-	public void storeVideo(InputStream videoStream, String mimeType, String sessionId) throws Exception;
+	public void storeVideo(InputStream videoStream, String mimeType, String sessionId, 
+			Map<String, Object> requestedCapabilities, Map<String, Object> nodeCapabilities) throws Exception;
 	
 	/**
 	 * Attempts to retrieve the video using this plugin. 
